--- a/package.json
+++ b/package.json
@@ -17,23 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "solid-js": "^1.8.7"
   },
   "devDependencies": {
     "husky": "^8.0.0",
     "husky-init": "^8.0.0",
     "pocketbase": "^0.20.1",
     "prettier": "^3.1.1",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-solid": "^2.8.0"
   }
 }
