--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "solid-js": "^1.8.7"
+    "solid-js": "^1.8.7",
+    "temporal-polyfill": "^0.2.0"
   },
   "devDependencies": {
     "@solidjs/router": "^0.10.5",
