--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "prepare": "husky install",
     "fmt": "prettier --check . && gofmt -l ./server/*.go",
     "fmt:fix": "prettier --write . && gofmt -l -w ./server/*.go",
-    "build:server": "go build -C ./server -o ../dist/recipie",
-    "server": "./dist/recipie serve",
+    "build:server": "bun run docker:build",
+    "server": "bun run docker:stop; bun run docker:start",
     "dev:client": "vite -c ./vite.config.ts ./client/",
     "build:client": "tsc && vite build",
     "preview": "vite preview",
-    "gittree": "git log --oneline --graph --decorate --all"
+    "gittree": "git log --oneline --graph --decorate --all",
+    "docker:build": "docker image rm -f recipie; docker build -t recipie . --progress=plain",
+    "docker:start": "docker container rm recipie; docker run -p 8090:8090 --name recipie recipie",
+    "docker:stop": "docker stop recipie"
   },
   "keywords": [],
   "author": "",
