--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "fmt": "prettier --check . && gofmt -l ./server/*.go",
     "fmt:fix": "prettier --write . && gofmt -l -w ./server/*.go",
     "build:server": "bun run docker:build",
-    "server": "bun run docker:stop; bun run docker:start",
+    "server": "bun run build:server && bun run docker:stop && bun run docker:start",
     "dev:client": "vite -c ./vite.config.ts ./client/",
     "build:client": "tsc && vite build",
     "preview": "vite preview",
     "gittree": "git log --oneline --graph --decorate --all",
     "docker:build": "docker image rm -f recipie; docker build -t recipie . --progress=plain",
-    "docker:start": "docker container rm recipie; docker run -p 8090:8090 --name recipie recipie",
+    "docker:start": "docker container rm recipie; docker run --mount type=bind,source=\"$(pwd)\"/dist/pb_data,target=/dist/pb_data -p 8090:8090 --name recipie recipie",
     "docker:stop": "docker stop recipie"
   },
   "keywords": [],
