adding bun install command to actions

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.0.21
+      - run: bun install --frozen-lockfile
       - run: bun run build:client
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
