--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:server-local": "go build -C ./server -o ../dist/recipie",
     "server-local": "./dist/recipie serve",
     "dev:client": "vite -c ./vite.config.ts ./client/",
-    "build:client": "tsc && vite build",
+    "build:client": "tsc && vite build -c ./vite.config.ts ./client/",
     "preview": "vite preview",
     "gittree": "git log --oneline --graph --decorate --all",
     "docker:build": "docker image rm -f recipie; docker build -t recipie . --progress=plain",
