setting hosting base dir?

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "server": "bun run build:server && bun run docker:stop && bun run docker:start",
     "build:server-local": "go build -C ./server -o ../dist/recipie",
     "server-local": "./dist/recipie serve",
-    "dev:client": "vite -c ./vite.config.ts",
-    "build:client": "tsc && vite build -c ./vite.config.ts",
+    "dev:client": "vite",
+    "build:client": "tsc && vite build",
     "preview": "vite preview",
     "gittree": "git log --oneline --graph --decorate --all",
     "docker:build": "docker image rm -f recipie; docker build -t recipie . --progress=plain",
