using vite env var for pocketbase URL

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -25,3 +25,4 @@ jobs:
           projectId: recipie-aea83
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
+          VITE_PB_URL: https://recipie-server-767578206397.us-central1.run.app
