trying environment variables in the firebase actions again

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,6 +18,8 @@ jobs:
           bun-version: 1.0.21
       - run: bun install --frozen-lockfile
       - run: bun run build:client
+        env:
+          VITE_PB_URL: https://recipie-server-767578206397.us-central1.run.app
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
