--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fmt": "prettier --check . && gofmt -l ./server/*.go",
     "fmt:fix": "prettier --write . && gofmt -l -w ./server/*.go",
     "build:server": "bun run docker:build",
-    "server": "bun run build:server && bun run docker:stop && bun run docker:start",
+    "server": "bun run build:server && bun run docker:stop || true && bun run docker:start",
     "build:server-local": "go build -C ./server -o ../dist/recipie",
     "server-local": "./dist/recipie serve",
     "client": "VITE_PB_URL=\"http://localhost:8090\" vite",
@@ -16,7 +16,7 @@
     "preview": "vite preview",
     "gittree": "git log --oneline --graph --decorate --all",
     "docker:build": "docker image rm -f recipie; docker build -t recipie . --progress=plain",
-    "docker:start": "docker container rm recipie; docker run --network=\"host\" --mount type=bind,source=\"$(pwd)\"/dist/pb_data,target=/dist/pb_data --mount type=bind,source=$HOME/.config/gcloud/application_default_credentials.json,target=/gcp/creds.json --env GOOGLE_APPLICATION_CREDENTIALS=/gcp/creds.json -p 8090:8090 --name recipie recipie",
+    "docker:start": "docker container rm recipie; docker run --network=\"host\" -v \"$(pwd)\"/dist/pb_data:/dist/pb_data --mount type=bind,source=$HOME/.config/gcloud/application_default_credentials.json,target=/gcp/creds.json --env GOOGLE_APPLICATION_CREDENTIALS=/gcp/creds.json -p 8090:8090 --name recipie recipie",
     "docker:stop": "docker stop recipie"
   },
   "keywords": [],
