--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "bun run docker:build",
     "server": "bun run build:server && bun run docker:stop || true && bun run docker:start",
     "build:server-local": "go build -C ./server -o ../dist/recipie",
-    "server-local": "./dist/recipie serve",
+    "server-local": "bun run build:server-local && ./dist/recipie serve",
     "client": "VITE_PB_URL=\"http://localhost:8090\" vite",
     "build:client": "tsc && vite build",
     "preview": "vite preview",
